<resources>
    <string name="app_name">STRING</string>
    <string name="intro_skip">skip</string>
    <string name="intro_title1">Get inspired by your personalised feed</string>
    <string name="intro_text1">Discover places that revolves around your interests and social network. Save the ones that call out to you strongly and organise them nicely into your itineraries at a later time.</string>
    <string name="intro_title2">Travel planning made seamless and enjoyable</string>
    <string name="intro_text2">String an itinerary from a fellow Stringer and continue to personalise it from there; Add new places that you’ve discovered and remove those that do not appeal to you.</string>
    <string name="intro_title3">Share experiences and be part of the String community</string>
    <string name="intro_text3">If you benefited from itineraries that you’ve strung, share the love; Contribute and share your personal experiences and feedback with fellow Stringers, as you learn from them too. After all, community is unity!</string>
    <string name="intro_view_pager_next">Next</string>
    <string name="register_email">SIGN UP WITH EMAIL</string>
    <string name="register_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="register_title">Discover the Endless Possibilities of Travel</string>
    <string name="register_text">Already have an account?</string>
    <string name="register_email_title">Create account</string>
    <string name="register_email_emailname">Email</string>
    <string name="register_email_emailname_hint">Enter your email address</string>
    <string name="register_email_name">Name</string>
    <string name="register_email_name_hint">Enter your name (optional)</string>
    <string name="register_email_dateOfBirth">Date of Birth</string>
    <string name="register_email_dateOfBirth_hint">Enter date of birth</string>
    <string name="register_email_username">Username</string>
    <string name="register_email_username_hint">Enter a username</string>
    <string name="register_email_password">Password</string>
    <string name="register_email_password_hint">Enter a password</string>
    <string name="register_email_confirmPassword">Confirm password</string>
    <string name="register_email_confirmPassword_hint">Enter password again</string>
    <string name="register_agree">I have read and agree to String’s</string>
    <string name="register_ToS">Terms of Service</string>
    <string name="sign_up">SIGN_UP</string>
    <string name="register_have_account">Already have an account?</string>
    <string name="login_facebook">WITH FACEBOOK</string>
    <string name="login_or">or</string>
    <string name="log_in">LOG IN</string>
    <string name="login_forgot">Forgot Password?</string>
    <string name="login_title">Log into your account</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_send_link">SEND RESET LINK</string>
    <string name="forgot_password_text">Enter your email address below and follow the instructions in the email we’ll send you.</string>
    <string name="no_push_text">Be in the know whenever you receive messages, new followers and more</string>
    <string name="no_push_later">Maybe Later</string>
    <string name="no_push_okay">OKAY</string>
    <string name="no_push_enable">ENABLE NOTIFICATIONS</string>
    <string name="no_location_enable">TURN ON LOCATION SERVICE</string>
    <string name="no_location_text">Share your location to help us find the best places near you</string>
    <string name="register_log_in">Log In</string>
</resources>