<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/register_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_email_title"
        android:textSize="25sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/register_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_title" />

    <TextView
        android:id="@+id/register_email_emailname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_email_emailname"
        android:textSize="17sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_line1"/>

    <EditText
        android:id="@+id/register_email_emailname_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_emailname"
        android:hint="@string/register_email_emailname_hint" />

    <TextView
        android:id="@+id/register_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_emailname_edittext" />

    <TextView
        android:id="@+id/register_email_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_email_name"
        android:textSize="17sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_line2"/>

    <EditText
        android:id="@+id/register_email_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_name"
        android:hint="@string/register_email_name_hint" />

    <TextView
        android:id="@+id/register_line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_name_edittext" />

    <TextView
        android:id="@+id/register_email_dateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_email_dateOfBirth"
        android:textSize="17sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_line3"/>

    <EditText
        android:id="@+id/register_email_dateOfBirth_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_dateOfBirth"
        android:hint="@string/register_email_dateOfBirth_hint"/>

    <TextView
        android:id="@+id/register_line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_dateOfBirth_edittext" />

    <TextView
        android:id="@+id/register_email_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_email_username"
        android:textSize="17sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_line4"/>

    <EditText
        android:id="@+id/register_email_username_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_username"
        android:hint="@string/register_email_username_hint"/>

    <TextView
        android:id="@+id/register_line5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_username_edittext" />

    <TextView
        android:id="@+id/register_email_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_email_password"
        android:textSize="17sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_line5"/>

    <EditText
        android:id="@+id/register_email_password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_password"
        android:hint="@string/register_email_password_hint"/>

    <TextView
        android:id="@+id/register_line6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_password_edittext" />

    <TextView
        android:id="@+id/register_email_confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_email_confirmPassword"
        android:textSize="17sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_line6"/>

    <EditText
        android:id="@+id/register_email_confirmPassword_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_confirmPassword"
        android:hint="@string/register_email_confirmPassword_hint"/>

    <TextView
        android:id="@+id/register_line7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_confirmPassword_edittext" />

    <CheckBox
        android:id="@+id/register_account_checkbox"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:button="@drawable/custom_checkbox"
        android:scaleX="3"
        android:scaleY="3"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_line7"/>

    <TextView
        android:id="@+id/register_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_agree"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toEndOf="@+id/register_account_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/register_line7"/>

    <TextView
        android:id="@+id/register_ToS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_ToS"
        android:textSize="16sp"
        android:textColor="#933DEC"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toEndOf="@+id/register_account_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/register_agree"/>

    <TextView
        android:id="@+id/register_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_sign_in_0"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toEndOf="@+id/register_account_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/register_ToS" />

    <TextView
        android:id="@+id/register_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_have_account"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toEndOf="@+id/register_account_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/register_sign_up"/>

    <TextView
        android:id="@+id/register_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_log_in"
        android:textSize="16sp"
        android:textColor="#933DEC"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/register_have_account"
        app:layout_constraintTop_toBottomOf="@+id/register_sign_up"/>

</androidx.constraintlayout.widget.ConstraintLayout>