<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:id="@+id/log_in_account"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="25sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/login_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cancel"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <Button
        android:id="@+id/login_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_register_facebook"
        android:text="@string/login_facebook"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_line1"
        app:drawableStartCompat="@drawable/facebook_icon" />

    <TextView
        android:id="@+id/login_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_or"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_facebook"/>

    <TextView
        android:id="@+id/login_email_emailname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_email_emailname"
        android:textSize="17sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_or"/>

    <EditText
        android:id="@+id/login_email_emailname_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_emailname"
        android:hint="@string/register_email_emailname_hint" />

    <TextView
        android:id="@+id/login_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_emailname_edittext" />

    <TextView
        android:id="@+id/login_email_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_email_password"
        android:textSize="17sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_line2"/>

    <EditText
        android:id="@+id/login_email_password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_password"
        android:hint="@string/register_email_password_hint"/>

    <TextView
        android:id="@+id/login_line6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_password_edittext" />

    <TextView
        android:id="@+id/login_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgot"
        android:textSize="16sp"
        android:textColor="#933DEC"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_line6"/>

    <TextView
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_sign_in_1"
        android:text="@string/log_in"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_forgot" />

    <TextView
        android:id="@+id/reset_access_token"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>