<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/no_push_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/notification_push"
        android:layout_marginBottom="30dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/no_push_enable"
        app:layout_constraintWidth_percent="0.75" />

    <TextView
        android:id="@+id/no_push_enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_push_enable"
        android:textColor="#9597A2"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/no_push_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_push_text"
        android:textColor="#000000"
        android:textSize="21sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_push_enable"
        app:layout_constraintWidth_percent="0.8"/>

    <TextView
        android:id="@+id/no_push_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_sign_in_1"
        android:text="@string/no_push_okay"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/no_push_later" />

    <TextView
        android:id="@+id/no_push_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_push_later"
        android:textSize="17sp"
        android:textColor="#933DEC"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>